examples/test/testpolicy11630.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11630
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key45: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value40
          key45: value17
          key23: value5
      podSelector:
        matchLabels:
          key7: value35
          key42: value33
          key21: value34
